Parse from InputStream directly if subclasses of AjaxRequest want to do this.